# dlt_alpaca

./: .gitignore  MarketCap_Processed_20241210.csv  custom_config.py  generate_template_toml.py  pyproject.toml  rest_api_pipeline.py
.dlt/: config.toml
alpaca/: __init__.py
schemas/export/: rest_api.schema.yaml
