[project]
name = "dlt-alpaca2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=1.10.0",
    "psutil>=7.0.0",
    "tomlkit>=0.13.2",
]

[tool.uv]
environments = [
  "platform_python_implementation != 'PyPy'"
]
